# ed25519

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  ed25519.py  license.txt  pyproject.toml  setup.py
.github/workflows/: wheels.yml
src/ed25519_orlp/: __init__.py  ed25519.py
src/ed25519_orlp/csrc/: python_shim.c
tests/: test_ed25519.py
