[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ed25519-orlp"
version = "0.0.1"
description = "Python wrapper around Orson Peters' Ed25519 implementation"
readme = "README.md"
authors = [{name = "Devin Carraway", email = "ed25519-orlp-python@devin.com"}]
license = {text = "Zlib"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: zlib/libpng License",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ed25519_orlp"]

[tool.setuptools.package-data]
ed25519_orlp = ["csrc/*"]
