[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ed25519-orlp"
version = "0.1.3"
description = "Python wrapper around Orson Peters' Ed25519 implementation"
readme = "README.md"
authors = [{name = "Devin Carraway", email = "ed25519-orlp-python@devin.com"}]
license = "Zlib"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.9"

# setuptools config moved back into setup.py

[tool.cibuildwheel]
test-command = "python -m unittest discover -s {project}/tests"
build = [
    "cp39-manylinux_x86_64",
    "cp39-manylinux_aarch64",
    "cp39-manylinux_armv7l",
    "cp39-musllinux_x86_64",
    "cp39-musllinux_aarch64",
    "cp39-musllinux_armv7l",
    "cp39-macosx_x86_64",
    "cp39-macosx_arm64",
    "cp39-win_amd64",
]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
manylinux-armv7l-image = "manylinux2014"
musllinux-x86_64-image = "musllinux_1_2"
musllinux-aarch64-image = "musllinux_1_2"
musllinux-armv7l-image = "musllinux_1_2"

[tool.cibuildwheel.macos]
# Pure C with only stdint.h/stddef.h — 10.9 is the oldest target clang still supports
deployment-target = "10.9"

